--- a/Index - Basic.ipynb
+++ b/Index - Basic.ipynb
@@ -2,21 +2,65 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# IPython & Jupyter: a PyCon 2015 tutorial"
+    "# Jupyter/IPython: EuroPython 2016 tutorial\n",
+    "<br/>\n",
+    "**Note**: This repo is derived from the official IPython-in-Depth tutorial [here](https://github.com/ipython/ipython-in-depth) first presented at PyCon 2012."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "Class outline:\n",
+    "#### Setup\n",
+    "* For discussion, self-help tips please connect to this\n",
+    "  * [Gitter chat room](https://gitter.im/mjbright/ipython-in-depth)\n",
+    "* Refer to the logistics page for installation information\n",
+    "  *  [Logistics page on github](https://github.com/mjbright/ipython-in-depth/blob/master/EuroPython2016-Logistics.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Working through the tutorial\n",
     "\n",
-    "* A quick [installation check](http://ipython.org/install.html)\n",
-    "* An overview of the IPython project from [the official website](http://ipython.org).\n",
-    "* Super basic intro to the notebook: typing code.\n",
-    "* [Notebook Basics](examples/Notebook/Notebook Basics.ipynb)\n",
+    "- We will first make sure you all have Jupyer installed and working\n",
+    "- We then invite you to follow along during the tutorial\n",
+    "- There will also be exercises along the way\n",
+    "\n",
+    "There are a lot (~ 100) more detailed notebooks in this same directory that cover other topics, but we can not cover all in a 3-hour tutorial.\n",
+    "\n",
+    "We encourage you to explore them and practice on your own.\n",
+    "\n",
+    "For even more detail, you can visit our [example collection](http://nbviewer.ipython.org/github/ipython/ipython/blob/master/examples/Index.ipynb) from our site, also included in this IPython source code repository."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    " #### Class outline:\n",
+    "* Overview of [Jupyter](http://jupyter.org) and [IPython](http://ipython.org) projects on the official websites.\n",
+    "* Super basic intro to the dashboard, notebook, Jupyter Lab alpha.\n",
+    "* [Notebook Basics](examples/Notebook/Notebook Basics.ipynb)     \n",
     "* [IPython - beyond plain python](examples/IPython Kernel/Beyond Plain Python.ipynb)\n",
     "* [Markdown Cells](examples/Notebook/Working With Markdown Cells.ipynb)\n",
     "* [Rich Display System](examples/IPython Kernel/Rich Output.ipynb)\n",
@@ -25,18 +69,10 @@
     "* [Running a Secure Public Notebook Server](examples/Notebook/Running%20the%20Notebook%20Server.ipynb#Securing-the-notebook-server)\n",
     "* [How Jupyter/IPython works](examples/Notebook/Multiple%20Languages%2C%20Frontends.ipynb) to run code in different languages."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are a lot more detailed notebooks in this same directory that cover other topics, but we can not cover all in a 3-hour tutorial. We encourage you to explore them and practice on your own.\n",
-    "\n",
-    "For even more detail, you can visit our [example collection](http://nbviewer.ipython.org/github/ipython/ipython/blob/master/examples/Index.ipynb) from our site, also included in the IPython source code repository."
-   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -52,7 +88,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
+  },
+  "livereveal": {
+   "height": 768,
+   "width": 1200
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
