Complete setup instructions

--- a/EuroPython2016-Logistics.ipynb
+++ b/EuroPython2016-Logistics.ipynb
@@ -38,16 +38,38 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Setup-1: Open the tutorial page\n",
+    "\n",
+    "<br/>\n",
+    "## Open the tutorial page on github\n",
+    "- [github.com/mjbright/ipython-in-depth](https://github.com/mjbright/ipython-in-depth)\n",
+    "\n",
+    "<br/>\n",
+    "## Open this document\n",
+    "- [*EuroPython2016-Logistics.ipynb*](https://github.com/mjbright/ipython-in-depth/EuroPython2016-Logistics.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "## Gitter channel\n",
+    "# Setup-2: Gitter channel\n",
     "\n",
     "During the session you are encouraged to ask, and answer questions on the *Gitter Channel* here:\n",
-    "- [https://gitter.im/mjbright/ipython-in-depth](https://gitter.im/mjbright/ipython-in-depth).\n",
+    "- [*https://gitter.im/mjbright/ipython-in-depth*](https://gitter.im/mjbright/ipython-in-depth).\n",
+    "\n",
+    "<br/>\n",
+    "#### Please connect to the Gitter Channel\n",
     "\n",
     "It is hoped that you can *help each other*.\n",
     "\n",
@@ -62,19 +84,16 @@
     }
    },
    "source": [
-    "# Jupyter Installation -1\n",
-    "<br/>\n",
-    "## Open the tutorial page on github\n",
-    "- [github.com/mjbright/ipython-in-depth](https://github.com/mjbright/ipython-in-depth)\n",
+    "# Setup-3: Download the tutorial repository\n",
+    "Either perform a git clone\n",
+    "- git clone https://github.com/mjbright/ipython-in-depth\n",
     "\n",
-    "## Open this document\n",
-    "- [*EuroPython2016-Logistics.ipynb*](https://github.com/mjbright/ipython-in-depth/EuroPython2016-Logistics.ipynb)\n",
+    "or download the zip file\n",
+    "- on command-line, wget https://github.com/mjbright/ipython-in-depth/archive/master.zip\n",
     "\n",
-    "## Connect to the Gitter Channel\n",
-    "- [*https://gitter.im/mjbright/ipython-in-depth*](https://gitter.im/mjbright/ipython-in-depth)\n",
+    "or download a zip file from the github page (following page) or from this [link to master.zip](https://github.com/mjbright/ipython-in-depth/archive/master.zip)\n",
     "\n",
-    "<br/>\n",
-    "## Read the following Jupyter Installation notes"
+    "Then unzip the file"
    ]
   },
   {
@@ -85,7 +104,20 @@
     }
    },
    "source": [
-    "# Jupyter Installation -2\n",
+    "# Setup-4: Download the tutorial repository using the Browser\n",
+    "\n",
+    "select \"Clone or Ownload\" then \"Download ZIP\" ![](images/DownloadRepo.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Setup-5: Jupyter Installation\n",
     "\n",
     "A quick [installation check](http://jupyter.readthedocs.io/en/latest/install.html)\n",
     "  * We recommend to install the Anaconda Python distribution\n",
@@ -104,12 +136,24 @@
     }
    },
    "source": [
-    "# Jupyter Installation -3\n",
+    "# Setup-6: Jupyter Installation-2\n",
     "\n",
     "- If you see this in your Browser you're good to go !\n",
-    "\n",
     "- If not please ask for help\n",
-    "<img width=900  src=\"http://localhost:8889/files/images/ipython-in-depth_dashboard.PNG\" />\n"
+    "<img width=900  src=\"/files/images/ipython-in-depth_dashboard.PNG\" />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Start: open the *Index - Basic.ipynb* notebook\n",
+    "\n",
+    "<img width=900  src=\"/files/images/IPythonInDepth_INDEXBasic.PNG\" />\n"
    ]
   }
  ],
