Corrected notebook links

--- a/Index - Basic.ipynb
+++ b/Index - Basic.ipynb
@@ -60,7 +60,7 @@
    "source": [
     " #### Class outline:\n",
     "* Overview of [Jupyter](http://jupyter.org) and [IPython](http://ipython.org) projects on the official websites.\n",
-    "* Super basic intro to the dashboard, notebook, Jupyter Lab alpha.\n",
+    "* Super basic intro to the [dashboard](/tree), notebook, [Jupyter Lab](/lab) alpha.\n",
     "* [Notebook Basics](examples/Notebook/Notebook Basics.ipynb)     \n",
     "* [IPython - beyond plain python](examples/IPython Kernel/Beyond Plain Python.ipynb)\n",
     "* [Markdown Cells](examples/Notebook/Working With Markdown Cells.ipynb)\n",
