--- a/examples/Notebook/Working With Markdown Cells.ipynb
+++ b/examples/Notebook/Working With Markdown Cells.ipynb
@@ -164,8 +164,20 @@
    "metadata": {},
    "source": [
     "Courtesy of MathJax, you can include mathematical expressions both inline: \n",
-    "$e^{i\\pi} + 1 = 0$  and displayed:\n",
-    "\n",
+    "$e^{i\\pi} + 1 = 0$  and displayed:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$e^x=\\sum_{i=0}^\\infty \\frac{1}{i!}x^i$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$e^x=\\sum_{i=0}^\\infty \\frac{1}{i!}x^i$$"
    ]
   },
@@ -223,10 +235,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "## Because Markdown is a superset of HTML you can even add things like HTML tables:\n",
+       "\n",
+       "<table>\n",
+       "<tr>\n",
+       "<th>Header 1</th>\n",
+       "<th>Header 2</th>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>row 1, cell 1</td>\n",
+       "<td>row 1, cell 2</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>row 2, cell 1</td>\n",
+       "<td>row 2, cell 2</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "Because Markdown is a superset of HTML you can even add things like HTML tables:\n",
+    "%%html\n",
+    "\n",
+    "## Because Markdown is a superset of HTML you can even add things like HTML tables:\n",
     "\n",
     "<table>\n",
     "<tr>\n",
@@ -259,17 +306,17 @@
     "\n",
     "    [subdirectory/]<filename>\n",
     "\n",
-    "For example, in the images folder, we have the Python logo:\n",
+    "For example, in the examples/images folder, we have the Python logo:\n",
     "\n",
-    "    <img src=\"images/python-logo.svg\" />\n",
+    "    <img src=\"/files/examples/images/python_logo.svg\" />\n",
     "\n",
-    "<img src=\"images/python-logo.svg\" />\n",
+    "<img src=\"/files/examples/images/python_logo.svg\" />\n",
     "\n",
     "and a video with the HTML5 video tag:\n",
     "\n",
-    "    <video controls src=\"images/animation.m4v\" />\n",
+    "    <video controls src=\"/files/examples/images/animation.m4v\" />\n",
     "\n",
-    "<video controls src=\"images/animation.m4v\" />\n",
+    "<video controls src=\"/files/examples/images/animation.m4v\" />\n",
     "\n",
     "These do not embed the data into the notebook file, and require that the files exist when you are viewing the notebook."
    ]
@@ -296,7 +343,29 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 0
 }
