--- a/Index - Basic.ipynb
+++ b/Index - Basic.ipynb
@@ -66,7 +66,7 @@
     "* [Markdown Cells](examples/Notebook/Working With Markdown Cells.ipynb)\n",
     "* [Rich Display System](examples/IPython Kernel/Rich Output.ipynb)\n",
     "* [Introduction to Interactive Javascript Widgets](examples/Interactive Widgets/Using Interact.ipynb)\n",
-    "* [Customizing IPython - a condensed version](exercises/Customization/Condensed.ipynb)\n",
+    "* [Customizing IPython - a condensed version **out of date**](exercises/Customization/Condensed.ipynb)\n",
     "* [Running a Secure Public Notebook Server](examples/Notebook/Running%20the%20Notebook%20Server.ipynb#Securing-the-notebook-server)\n",
     "* [How Jupyter/IPython works](examples/Notebook/Multiple%20Languages%2C%20Frontends.ipynb) to run code in different languages."
    ]
