--- a/examples/Notebook/Running the Notebook Server.ipynb
+++ b/examples/Notebook/Running the Notebook Server.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "You can start the notebook server from the command line (Terminal on Mac/Linux, CMD prompt on Windows) by running the following command: \n",
     "\n",
-    "    ipython notebook\n",
+    "    jupyter notebook\n",
     "\n",
     "This will print some information about the notebook server in your terminal, including the URL of the web application (by default, `http://127.0.0.1:8888`). It will then open your default web browser to this URL.\n",
     "\n",
@@ -37,27 +37,22 @@
     "\n",
     "You can also specify the port manually:\n",
     "\n",
-    "    ipython notebook --port 9999\n",
+    "    jupyter notebook --port 9999\n",
     "\n",
     "Or start notebook server without opening a web browser.\n",
     "\n",
-    "    ipython notebook --no-browser\n",
+    "    jupyter notebook --no-browser\n",
     "\n",
     "The notebook server has a number of other command line arguments that can be displayed with the `--help` flag: \n",
     "\n",
-    "    ipython notebook --help\n",
-    "\n",
-    "<div class=\"alert alert-failure\">\n",
-    "It used to be possible to specify kernel options, such as <code>--pylab inline</code> from the command line. This is deprecated in IPython 2.0 and will be removed in IPython 3.0. To enable matplotlib based plotting for the Python kernel use the <code>%matplotlib</code> magic command.\n",
-    "</div>\n",
-    "\n"
+    "    jupyter notebook --help\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuring the IPython Notebook"
+    "## Configuring the IPython Notebook (IPython only)"
    ]
   },
   {
@@ -172,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The IPython Notebook allows arbitrary code execution on the computer running it. Thus, the notebook web server should never be run on the open internet without first securing it. By default, the notebook server only listens on local network interface (`127.0.0.1`) There are two steps required to secure the notebook server:\n",
+    "The Jupyter Notebook allows arbitrary code execution on the computer running it. Thus, the notebook web server should never be run on the open internet without first securing it. By default, the notebook server only listens on local network interface (`127.0.0.1`) There are two steps required to secure the notebook server:\n",
     "\n",
     "1. Setting a password\n",
     "2. Encrypt network traffic using SSL"
@@ -285,7 +280,7 @@
     "\n",
     "This can be accomplished by passing a command line options.\n",
     "\n",
-    "    ipython notebook --ip=* --no-browser\n",
+    "    jupyter notebook --ip=* --no-browser\n",
     "\n",
     "You can also add the following to your`ipython_notebook_config.py` file:\n",
     "\n",
@@ -307,11 +302,11 @@
    "metadata": {},
    "source": [
     "The notebook dashboard typically lives at the URL `http://localhost:8888/tree`. If you prefer that it lives, together with the \n",
-    "rest of the notebook web application, under a base URL prefix, such as `http://localhost:8888/ipython/tree`, you can do so by adding the following lines to your `ipython_notebook_config.py` file.\n",
+    "rest of the notebook web application, under a base URL prefix, such as `http://localhost:8888/jupyter/tree`, you can do so by adding the following lines to your `ipython_notebook_config.py` file.\n",
     "\n",
     "```python\n",
-    "c.NotebookApp.base_url = '/ipython/'\n",
-    "c.NotebookApp.webapp_settings = {'static_url_prefix':'/ipython/static/'}\n",
+    "c.NotebookApp.base_url = '/jupyter/'\n",
+    "c.NotebookApp.webapp_settings = {'static_url_prefix':'/jupyter/static/'}\n",
     "```"
    ]
   },
@@ -372,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "JupyterHub is a multi-user server that manages and proxies multiple instances of the single-user IPython/Jupyter Notebook server.\n",
+    "JupyterHub is a multi-user server that manages and proxies multiple instances of the single-user Jupyter Notebook server.\n",
     "\n",
     "<img src=\"https://c2a32ff18d23c8f567f0-e44b0df73868b5d567b1e58e01681d15.ssl.cf5.rackcdn.com/2015-03-24-deploying-jupyterhub-for-education/jupyterhub-9efc59baf33d2640641cb4a1fd9145ff.gif\" width=\"800px\" />\n",
     "\n",
@@ -380,7 +375,7 @@
     "\n",
     "* multi-user Hub (tornado process)\n",
     "* configurable http proxy (node-http-proxy)\n",
-    "* multiple single-user IPython notebook servers (Python/IPython/tornado)\n",
+    "* multiple single-user Jupyter notebook servers (Python/Jupyter/tornado)\n",
     "\n",
     "#### [Configurable Proxy](https://github.com/jupyter/configurable-http-proxy)\n",
     "\n",
@@ -472,7 +467,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
