Updated some IPython references to Jupyter

--- a/examples/Notebook/Multiple Languages, Frontends.ipynb
+++ b/examples/Notebook/Multiple Languages, Frontends.ipynb
@@ -29,10 +29,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The IPython Kernel\n",
+    "## The Kernel\n",
     "\n",
-    "All the other interfaces—the Notebook, the Qt console, `ipython console` in\n",
-    "the terminal, and third party interfaces—use the IPython Kernel. This is a\n",
+    "All the other interfaces—the Notebook, the Qt console, `jupyter console` in\n",
+    "the terminal, and third party interfaces—use the selected Kernel - IPython by default. This is a\n",
     "separate process which is responsible for running user code, and things like\n",
     "computing possible completions. Frontends communicate with it using JSON\n",
     "messages sent over [ZeroMQ](http://zeromq.org/) sockets; the protocol they use is described in\n",
@@ -114,7 +114,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
